
Package org.springframework.osgi.io
* added support for classpath: and classpath*: patterns

Package org.springframework.osgi.test
* FelixPlatform uses the Felix distribution default system packages
* KnopflerfishPlatform uses the KF distribution default system packages

Changes in version 1.0.2 (2008-03-xx)
-------------------------------------

Package org.springframework.osgi.context
* AbstractOsgiBundleApplicationContext registers the application context as an OSGi service using just the interfaces

Package org.springframework.osgi.util
* BundleDelegatingClassLoader relies on default hashCode/equals methods to prevent caching proxies on bundle updates

Package org.springframework.osgi.test
* Instalation bundles have the location set to the backing resource URL if possible, falling back to the description


Changes in version 1.0.1 (2008-02-29)
-------------------------------------

General
* fixed nested Eclipse classpath entry in spring-osgi bundle archetype
* added log4j.properties to spring-osgi bundle archetype
* added OSGi integration test to the spring-osgi bundle archetype

Package org.springframework.context.support
* the namespace resolver mechanism first checks the local bundle classpath before using the extender namespace service

Package org.springframework.osgi.context
* fixed AbstractDelegatedExecutionApplicationContext to log errors that occur during the bean factory startup

Package org.springframework.osgi.io
* improved OsgiBundleResource handling of jars with missing archive entries for folders
* improved OsgiBundleResourcePatternResolver performance when checking for jar resources
* improved detection of relative OSGi URLs

Package org.springframework.osgi.test
* AbstractOsgiTest provides better error messages for bundle that fail to start
* custom artifact locators can be used with AbstractDependencyManagerTests
* removed all internal usage of system properties by the testing infrastructure